--- a/assets/html/partials/services.html
+++ b/assets/html/partials/services.html
@@ -36,6 +36,40 @@
 								</div>
 							</div>
 						</div>
+						<div class="services__card services-card">
+							<div class="services-card__price">От 40&#8381;/м&#178;</div>
+							<div class="services-card__img">
+								<img src="@img/services/img-1.webp" alt="Ремонт водонапорных башен">
+							</div>
+							<div class="services-card__links">
+								<h3 class="services-card__title">
+									<a class="link-reset" href="#/">
+										Мойка крыш
+									</a>
+								</h3>
+								<div class="services-card__inner">
+									<a class="link services-card__link link-reset" href="#/">Подробнее</a>
+									<a class="link link-reset" href="#/">Быстрый заказ</a>
+								</div>
+							</div>
+						</div>
+						<div class="services__card services-card">
+							<div class="services-card__price">От 40&#8381;/м&#178;</div>
+							<div class="services-card__img">
+								<img src="@img/services/img-1.webp" alt="Ремонт водонапорных башен">
+							</div>
+							<div class="services-card__links">
+								<h3 class="services-card__title">
+									<a class="link-reset" href="#/">
+										Ремонт водонапорных башен
+									</a>
+								</h3>
+								<div class="services-card__inner">
+									<a class="link services-card__link link-reset" href="#/">Подробнее</a>
+									<a class="link link-reset" href="#/">Быстрый заказ</a>
+								</div>
+							</div>
+						</div>
 
 					</div>
 					<div class="services-tabs__content-item">2</div>
