--- a/assets/scss/chunk/_letters.scss
+++ b/assets/scss/chunk/_letters.scss
@@ -14,4 +14,22 @@
 		position: static;
 		margin-bottom: 50px;
 	}
+
+	& .swiper-button-prev {
+		left: 0;
+		transform: translateX(-50%);
+
+		@media (width <= 1200px) {
+			display: none;
+		}
+	}
+
+	& .swiper-button-next {
+		right: 0;
+		transform: translateX(50%);
+
+		@media (width <= 1200px) {
+			display: none;
+		}
+	}
 }
