--- a/assets/scss/chunk/_services.scss
+++ b/assets/scss/chunk/_services.scss
@@ -13,7 +13,7 @@
 		gap: 10px 20px;
 
 		&-item {
-			border-radius: 10px;
+			border-radius: 7px;
 			padding: 10px 15px;
 			font-weight: 500;
 			color: var(--light-color);
@@ -40,6 +40,7 @@
 		&-item {
 			display: grid;
 			grid-template-columns: repeat(3, 1fr);
+			margin: 0 auto;
 			width: fit-content;
 			gap: 25px;
 
@@ -59,7 +60,8 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	border-radius: 25px;
+	border-radius: 10px;
+	padding: 5px 5px 0;
 	width: 100%;
 	max-width: 350px;
 	box-shadow: 0 0 10px rgb(0 0 0 / 25%);
@@ -74,13 +76,14 @@
 		align-items: center;
 		justify-content: center;
 		overflow: hidden;
+		border-radius: 10px 10px 0 0;
 		max-height: 200px;
 	}
 
 	&__price {
 		position: absolute;
-		right: 0;
-		top: 0;
+		right: 5px;
+		top: 5px;
 		border-radius: 0 10px;
 		padding: 5px 10px;
 		font-family: var(--font-second);
@@ -121,6 +124,7 @@
 		align-items: flex-start;
 		padding: 30px;
 		width: 100%;
+		height: 100%;
 		transition-property: transform, opacity, visibility;
 		transition-duration: 0.5s;
 		gap: 30px;
@@ -149,6 +153,7 @@
 		flex-flow: column wrap;
 		align-items: flex-start;
 		align-items: stretch;
+		margin-top: auto;
 		width: 100%;
 		font-weight: 500;
 		gap: 5px;
